--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@tabler/icons-react": "^3.34.0",
     "better-auth": "^1.2.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -45,6 +46,7 @@
     "dotenv": "^17.2.0",
     "drizzle-orm": "^0.44.3",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.23.6",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.525.0",
     "next": "15.4.1",
@@ -55,6 +57,7 @@
     "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^3.0.3",
+    "react-textarea-autosize": "^8.5.9",
     "recharts": "^2.15.4",
     "resend": "^4.6.0",
     "sonner": "^2.0.6",
