--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@trpc/client": "^11.4.3",
     "@trpc/server": "^11.4.3",
     "@trpc/tanstack-react-query": "^11.4.3",
+    "@uploadthing/react": "^7.3.2",
     "ai": "^4.3.19",
     "better-auth": "^1.2.12",
     "class-variance-authority": "^0.7.1",
@@ -78,6 +79,7 @@
     "server-only": "^0.0.1",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
+    "uploadthing": "^7.7.3",
     "vaul": "^1.1.2",
     "zod": "^3.25.76"
   },
