--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "resend": "^4.6.0",
     "server-only": "^0.0.1",
     "sonner": "^2.0.6",
+    "superjson": "^2.2.2",
     "tailwind-merge": "^3.3.1",
     "uploadthing": "^7.7.3",
     "vaul": "^1.1.2",
